plugins {
    id "java"
    id "io.spring.dependency-management" version "1.0.7.RELEASE"
    id "org.springframework.boot" version "2.2.6.RELEASE"
}

version = "0.0.1-SNAPSHOT"

java {
    sourceCompatibility = JavaVersion.VERSION_14
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"

    testImplementation ("org.springframework.boot:spring-boot-starter-test") {
        exclude( group: "org.junit.vintage")
    }
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
    options.fork = true
    options.deprecation = true
    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "--enable-preview", "-Xlint:preview"]
}

tasks.withType(Test) {
    jvmArgs += ["--enable-preview"]
}
